<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.framgia.hrm.activity.AboutActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/MyMaterialTheme.PopupOverlay"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo"
                android:layout_marginTop="@dimen/activity_about_text_margin_top"/>

            <TextView
                android:id="@+id/text_activity_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="@dimen/activity_about_text_size_title"
                android:gravity="center"
                android:textStyle="bold"
                android:shadowColor="@android:color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/activity_about_text_size_version"
                android:text="@string/activity_staff_list_text_version"
                android:gravity="center"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/activity_about_text_margin_top"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/activity_about_text_size_developer_title"
                android:text="@string/activity_staff_list_text_developed_by"
                android:gravity="center"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/activity_about_text_margin_top"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_staff_list_text_ahsan"
                android:textSize="@dimen/activity_about_text_size_developers"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_staff_list_text_avishek"
                android:textSize="@dimen/activity_about_text_size_developers"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_staff_list_text_shawon"
                android:textSize="@dimen/activity_about_text_size_developers"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_staff_list_text_supervised_by"
                android:textSize="@dimen/activity_about_text_size_developer_title"
                android:textAllCaps="true"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/activity_about_text_margin_top"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_staff_list_text_supervisor"
                android:textSize="@dimen/activity_about_text_size_developers"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_staff_list_text_copyright"
                android:textSize="@dimen/activity_about_text_size_copyright"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/activity_about_text_margin_top_copyright"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
