<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/relative_1"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:context="com.framgia.hrm.activity.Addstaff">
    <LinearLayout
        android:id="@+id/linear_1"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:paddingLeft="@dimen/fragment_registration_linear_1_paddingLeft"
        android:paddingRight="@dimen/fragment_registration_linear_1_paddingRight"
        android:paddingTop="@dimen/fragment_registration_linear_1_paddingTop">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fragment_registration_linear_1_edit_name_hint_name"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/phoneLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ageLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/fragment_registration_linear_1_phonelayout_margin_top">
            <EditText
                android:id="@+id/edit_phone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/fragment_registration_linear_1_edit_phone_hint_phone"
                android:inputType="phone" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/birth_place_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edit_birth_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fragment_registration_linear_1_edit_birth_place_hint_birth_place"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>
        <RelativeLayout
            android:id="@+id/relative_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_registration_relative_2_layout_margin_top">
            <EditText
                android:id="@+id/edit_calendar_id"
                android:layout_width="@dimen/fragment_registration_relative_2_edit_calender_id_layout_width"
                android:layout_height="wrap_content"
                android:hint="@string/fragment_registration_relative_2_edit_calender_id_hint_date"
                android:inputType="date" />
            <ImageButton
                android:id="@+id/imageButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/edit_calendar_id"
                android:cropToPadding="true"
                android:onClick="onViewCreated"
                android:src="@drawable/calendar" />
            <TextView
                android:id="@+id/text_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/imageButton1"
                android:layout_marginRight="@dimen/fragment_registration_relative_2_text_activity_margin_right"
                android:layout_marginTop="@dimen/fragment_registration_relative_2_text_activity_margin_top"
                android:text="@string/select" />
            <Spinner
                android:id="@+id/spinner_text_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/imageButton1"
                android:layout_marginTop="@dimen/fragment_registration_relative_2_text_activity_spinner_text_activity_layout_margin_top"
                android:layout_toRightOf="@id/text_activity"
                android:entries="@array/activity_array"
                android:popupBackground="@color/fragment_registration_relative_2_text_activity_spinner_text_activity_popup_background"/>
            <TextView
                android:id="@+id/text_department"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/spinner_text_activity"
                android:layout_marginRight="@dimen/fragment_registration_relative_2_text_department_margin_right"
                android:layout_marginTop="@dimen/fragment_registration_relative_2_text_department_margin_top"
                android:text="@string/fragment_registration_relative_2_text_department_select_dept" />
            <Spinner
                android:id="@+id/spinner_dept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/spinner_text_activity"
                android:layout_marginTop="@dimen/fragment_registration_relative_2_text_department_spinner_dept_margin_top"
                android:layout_toRightOf="@id/text_department"
                android:entries="@array/department_array"
                android:popupBackground="@color/fragment_registration_relative_2_text_department_spinner_dept_popup_background"/>
            <TextView
                android:id="@+id/text_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/spinner_dept"
                android:layout_marginRight="@dimen/fragment_registration_relative_2_text_status_margin_right"
                android:layout_marginTop="@dimen/fragment_registration_relative_2_text_status_margin_top"
                android:text="@string/select_status" />
            <Spinner
                android:id="@+id/spinner_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/spinner_dept"
                android:layout_marginTop="@dimen/fragment_registration_relative_2_text_status_spinner_status_margin_top"
                android:layout_toRightOf="@id/spinner_status"
                android:entries="@array/status_array"
                android:popupBackground="@color/fragment_registration_relative_2_text_status_spinner_status_popup_background"/>
            <TextView
                android:id="@+id/text_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/spinner_status"
                android:layout_marginRight="@dimen/fragment_registration_relative_2_text_position_margin_right"
                android:layout_marginTop="@dimen/fragment_registration_relative_2_text_position_margin_top"
                android:text="@string/select_position" />
            <Spinner
                android:id="@+id/spinner_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/spinner_status"
                android:layout_marginTop="@dimen/fragment_registration_relative_2_text_position_spinner_position_margin_top"
                android:layout_toRightOf="@id/spinner_position"
                android:entries="@array/position_array"
                android:popupBackground="@color/fragment_registration_relative_2_text_position_spinner_position_popup_background"/>
        </RelativeLayout>
        <Button
            android:id="@+id/btn_add_usr"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_registration_linear_1_btn_add_usr_layout_margintop"
            android:background="@color/colorPrimary"
            android:text="@string/btn_add_usr"
            android:textColor="@android:color/white" />
    </LinearLayout>
</RelativeLayout>

